# QuantConsole

./: .env.prod.example  .gitignore  BUILD_SUCCESS_REPORT.md  COMPARISON_PAGE_FIX_REPORT.md  COPILOT_COMPATIBILITY_REPORT.md  COPILOT_OPTIMIZATION_REPORT.md  EXCHANGE_DATA_ANALYSIS.md  EXCHANGE_SELECTOR_FEATURES.md  EXCHANGE_SWITCH_FIX_REPORT.md  EXCHANGE_SWITCH_TEST_GUIDE.md  FEATURE_COMPLETION_REPORT.md  FEATURE_DEMO_GUIDE.md  FEATURE_INTEGRATION_PLAN.md  IMPLEMENTATION_REPORT.md  LAYOUT_OPTIMIZATION_REPORT.md  LOGO_CLICK_FIX_REPORT.md  MANUAL_STARTUP_GUIDE.md  OKX_BINANCE_DATA_STRATEGY.md  PERPETUAL_MIGRATION_REPORT.md  PERPETUAL_USAGE_GUIDE.md  PHASE1_COMPLETION_REPORT.md  PROJECT_REFACTOR_REPORT.md  PROJECT_SUMMARY.md  QuantConsole.code-workspace  README.md  REAL_DATA_INTEGRATION.md  REGISTRATION_DATABASE_FLOW.md  TESTING_GUIDE.md  TRADING_CONSOLE_README.md  TROUBLESHOOTING.md  USER_REQUIREMENTS_ANALYSIS.md  VSCODE_TASKS_RESTORATION_REPORT.md  WINDOWS_SETUP_GUIDE.md  check_users.js  delete_test_user.js  deploy.bat  deploy.sh  detect-proxy.bat  docker-compose.prod.yml  docker-compose.yml  (+18 more)
backend/: .env  .env.example  Cargo.toml  Dockerfile.prod
backend/.cargo/: config.toml
backend/migration/: Cargo.toml
backend/migration/src/: lib.rs  m20231201_000001_create_users_table.rs  m20231201_000002_create_user_sessions_table.rs  m20231201_000003_create_security_events_table.rs  m20240808_000001_create_watchlist_tables.rs
backend/src/: main.rs
backend/src/handlers/: auth.rs  device.rs  market_data.rs  mod.rs  watchlist.rs
backend/src/middleware/: auth.rs  mod.rs
(+108 files in other folders)
